Fixed opacity issue of animation by adding z-index to text.
This commit also changes the font color to pure white.

--- a/src/utils/animation/DisplacementSphere.css
+++ b/src/utils/animation/DisplacementSphere.css
@@ -2,5 +2,5 @@
   position: absolute;
   width: 100vw;
   inset: 0;
-  opacity: 0.4;
+  opacity: 1;
 }
